# medical-rag-chat

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: app.py  indexing.py  main.py  query.py
data/: Prise en charge des Pneumopathies aigues communautaires V2.docx
data/chroma_db/: chroma.sqlite3
